--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Touchauto</string>
+    <string name="app_name">Caravan</string>
     <!-- Common -->
     <string name="email">Email</string>
     <string name="password">Password</string>
